Test Sandbox Project/src/objects/QA_Periode__c.object
<CustomObject>
    <fields>
        <fullName>Count_Sample__c</fullName>
        <label>Count Sample</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Count_Week__c</fullName>
        <inlineHelpText>(Week)</inlineHelpText>
        <label>Count Week</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_Date__c</fullName>
        <label>Document Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Periode__c</fullName>
        <formula>IF ( MONTH(Document_Date__c) == 1, &apos;January&apos;,
IF ( MONTH(Document_Date__c) == 2, &apos;February&apos;,
IF ( MONTH(Document_Date__c) == 3, &apos;March&apos;,
IF ( MONTH(Document_Date__c) == 4, &apos;April&apos;,
IF ( MONTH(Document_Date__c) == 5, &apos;May&apos;,
IF ( MONTH(Document_Date__c) == 6, &apos;June&apos;,
IF ( MONTH(Document_Date__c) == 7, &apos;July&apos;,
IF ( MONTH(Document_Date__c) == 8, &apos;August&apos;,
IF ( MONTH(Document_Date__c) == 9, &apos;September&apos;,
IF ( MONTH(Document_Date__c) == 10, &apos;October&apos;,
IF ( MONTH(Document_Date__c) == 11, &apos;November&apos;,
IF ( MONTH(Document_Date__c) == 12, &apos;December&apos;,&apos;&apos;))))))))))))
&amp;&apos; &apos;&amp;TEXT(Year(Document_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Periode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QA_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QA Question</label>
        <referenceTo>QA_Question__c</referenceTo>
        <relationshipLabel>QA Periode</relationshipLabel>
        <relationshipName>QA_Periode</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Refresh_QA_Agent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Refresh QA Agent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type_Agent__c</fullName>
        <formula>TEXT(QA_Question__r.Type_Agent__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type Agent</label>
        <type>Text</type>
    </fields>
    <label>QA Periode</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>QA Periode No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QA Periode</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Question_must_Active</fullName>
        <active>true</active>
        <errorConditionFormula>!QA_Question__r.Active__c</errorConditionFormula>
        <errorMessage>QA Question must Active</errorMessage>
    </validationRules>
</CustomObject>